# nr-hydrometric-rating-curve

./: .env.example  .gitignore  .trivyignore  COMPLIANCE.yaml  README.md  SECURITY.md  compose.yml  docker-compose.yml  manage.py  nginx.conf  pytest.ini  renovate.json
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.app  Dockerfile.nginx  README.md  conftest.py  docker-compose.dev.yml  docker-compose.yml  nginx.conf  nginx.conf.template  openshift.deploy.yml  openshift.nginx.deploy.yml  pyproject.toml  pytest.ini  requirements.txt  start_app.sh  start_nginx.sh
frontend/rctool/: forms.py  tests.py  urls.py  utils.py  views.py
frontend/rctool/functions/: fit_linear_model.py
frontend/rctool/migrations/: 0001_initial.py
frontend/rctool/templates/rctool/: about.html  account.html  base.html  home.html
frontend/rctool/templates/rctool/components/: navbar.html  table.html
frontend/rctool/templates/rctool/rctool/develop/: develop_input_settings.html  develop_table.html  develop_table_measurents.html  develop_table_rating.html  rctool_develop.html  rctool_develop_js.html
frontend/rctool/templates/rctool/rctool/export/: rctool_export.html  (+1 more)
frontend/rctool/templatetags/: custom_tags.py
frontend/rctool/tests/: test_fit_linear_model.py  test_forms.py  test_integration.py  test_legacy.py  test_views.py  test_views_helpers.py
frontend/rctool_project/: settings.py  test_settings.py
frontend/static/css/: bootstrap.min.css  header.css  main.css  rctool_develop.css  rctool_intro.css  rctool_main.css  rctool_tour.css
frontend/static/js/: chartjs-plugin-zoom.min.js  log-base-n-axis.js
frontend/static/sample_data/: sample_data.csv
frontend/test_files/: RC_LCR2122.csv  RC_cook1.csv  RC_cook2.csv  RC_random.csv  capilano_field_data.csv  test4.csv
(+73 files in other folders)
