[tool.poetry]
name = "rctool"
version = "1.0.0"
description = ""
authors = [
    "Tobias Mueller <to.mueller@gmail.com, Tyler De Jong <TDeJong@nhcweb.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
django = "^5.0.3"
scikit-learn = "^1.4.1"
scipy = "^1.12.0"
pandas = "^2.2.1"
lmfit = "^1.2.2"
xhtml2pdf = "^0.2.15"
matplotlib = "^3.8.3"
gunicorn = "^23.0.0"
pip = "^25.0"
setuptools = "^77.0.0"
numpy = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
