[tool.poetry]
name = "rctool"
version = "1.0.0"
authors = ["Project maintainers (please use GitHub Issues) <noreply@invalid.local>"]
description = ""

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
django = "^5.0.3"
scikit-learn = "^1.4.1"
scipy = "^1.12.0"
pandas = "^2.2.1"
lmfit = "^1.2.2"
xhtml2pdf = "^0.2.15"
matplotlib = "^3.8.3"
gunicorn = "^23.0.0"
pip = "^25.0"
setuptools = "^80.0.0"
numpy = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
