[tool.poetry]
name = "rctool"
version = "1.0.0"
authors = ["Project maintainers (please use GitHub Issues) <noreply@invalid.local>"]
description = ""

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
django = "^5.0.3"
scikit-learn = "^1.4.1"
scipy = "^1.12.0"
pandas = "^2.2.1"
lmfit = "^1.2.2"
matplotlib = "^3.8.3"
gunicorn = "^23.0.0"
pip = "^25.0"
setuptools = "^80.0.0"
numpy = "^2.2.2"

[tool.poetry.extras]
pdf = ["xhtml2pdf"]
all = ["pycairo"]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
